# opendart-py

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic.py
opendart/: __init__.py  client.py  corp_code.py  exceptions.py  models.py
tests/: test_models.py
