[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opendart"
version = "0.1.0"
description = "Async Python client for DART (Korea Financial Supervisory Service) OpenAPI — 한국 전자공시 비동기 클라이언트"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Treasurer", email = "ted@treasurer.co.kr" }]
keywords = [
    "dart",
    "opendart",
    "korea",
    "krx",
    "kospi",
    "kosdaq",
    "finance",
    "disclosure",
    "전자공시",
    "한국주식",
    "금융감독원",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Natural Language :: Korean",
]
dependencies = [
    "httpx>=0.25",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/treasurer-co/opendart-py"
Repository = "https://github.com/treasurer-co/opendart-py"
Issues = "https://github.com/treasurer-co/opendart-py/issues"

[tool.hatch.build.targets.wheel]
packages = ["opendart"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
