[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opendart-py"
version = "0.1.0"
description = "Async Python client for DART — Korea's Financial Supervisory Service corporate disclosure OpenAPI (KOSPI / KOSDAQ / KONEX filings, financials, ownership)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Treasurer", email = "ted@treasurer.co.kr" }]
keywords = [
    "dart",
    "opendart",
    "korea",
    "korean-stocks",
    "krx",
    "kospi",
    "kosdaq",
    "konex",
    "finance",
    "fintech",
    "disclosure",
    "filings",
    "edgar-equivalent",
    "financial-statements",
    "equity-research",
    "value-up",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
    "Natural Language :: English",
]
dependencies = [
    "httpx>=0.25",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://alpha-lenz.com"
Repository = "https://github.com/TreasurerSquad/opendart-py"
Issues = "https://github.com/TreasurerSquad/opendart-py/issues"
"Used in production by" = "https://alpha-lenz.com"

[tool.hatch.build.targets.wheel]
packages = ["opendart"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
